--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "react-native-unimodules": "~0.13.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
